--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.10"
 dependencies = [
   "requests>=2.31.0",
   "PyYAML>=6.0.1",
+  "pandas>=2.0.0",
+  "pyarrow>=14.0.0",
 ]
-
 [project.scripts]
 xrayctl = "xrayctl.main:main"
